copied files from other project

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<% content_for :title, "Contact | #{base_title}" %>                                                                  
+
+<div class="centered-page">
+  <h1>Contact</h1>
+    <p>This is the contact page for Created.Software</p>
+</div>
