--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% content_for :title, "Help | #{base_title}" %> 
+
+<div class="centered-page">
+  <h1>Help</h1>
+    <p>This is the help page for Created.Software</p>
+</div>
