--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<% content_for :title, "About | #{base_title}" %>
+
+<div class="centered-page">
+  <h1>About</h1>
+  <p>This is the about page for Created.Software</p>
+</div>
