--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
           <li><%= link_to "About", about_path %></li>
           <li><%= link_to "Help", help_path%></li>
           <li><%= link_to "Contact", contact_path %></li>
-          <li class="login-signup-btn login-btn-color"><%= link_to "Login", '#' %></li>
+          <li class="login-signup-btn login-btn-color"><%= link_to "Login", login_path %></li>
           <% unless current_page?(root_path) %>
             <li class="login-signup-btn signup-btn-color"><%= link_to "Signup", signup_path unless current_page?(root_path)%></li>
           <% end %>
