--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,11 +58,12 @@ body {
   min-height: 100vh;
   text-align: center;
   background-color: #6CB4EE; /* Matches your existing background */
+  padding-top: 100px;
 }
 
 /* Form container styling */
 .form-container {
-  display: flex;
+  / * display: flex; */
   flex-direction: column;
   align-items: center;
   justify-content: center;
