--- a/app/views/signup/new.html.erb
+++ b/app/views/signup/new.html.erb
@@ -1,3 +1,17 @@
+<% if @user.errors.any? %>
+  <div class="alert alert-error">
+    <div class="content">
+      <strong>There were some errors:</strong>
+      <ul>
+        <% @user.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+    <button type="button" class="close-btn" onclick="this.parentElement.style.display='none'">×</button>
+  </div>
+<% end %>
+
 <%= tag.div(flash[:alert], class: "alert-message") if flash[:alert] %>
 <%= tag.div(flash[:notice], class: "notice-message") if flash[:notice] %>
 
