--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,21 +30,32 @@
         <span></span>
         <span></span>
       </div>
-      <nav id="navbar">
-        <ul>
-          <!-- Show Home link if current page IS NOT at the root_path -->
-          <% unless current_page?(root_path) %>
-            <li><%= link_to "Home", root_path %></li>
-          <% end %>
-          <li><%= link_to "About", about_path %></li>
-          <li><%= link_to "Help", help_path%></li>
-          <li><%= link_to "Contact", contact_path %></li>
-          <li class=""><%= link_to "Login", login_path %></li>
-          <% unless current_page?(root_path) %>
-            <li class=""><%= link_to "Signup", signup_path unless current_page?(root_path)%></li>
-          <% end %>
-        </ul>
-      </nav>
+
+<nav id="navbar">
+  <ul>
+    <% unless current_page?(root_path) %>
+      <li><%= link_to "Home", root_path %></li>
+    <% end %>
+    <li><%= link_to "About", about_path %></li>
+    <li><%= link_to "Help", help_path %></li>
+    <li><%= link_to "Contact", contact_path %></li>
+
+    <% if current_user %>
+      <li><%= link_to "Dashboard", dashboard_path %></li>
+      <li>
+      <%= link_to "Log out", logout_path, data: { turbo_method: :delete }, class: "nav-link" %>
+      </li>
+
+    <% else %>
+      <li><%= link_to "Login", login_path %></li>
+      <% unless current_page?(root_path) %>
+        <li><%= link_to "Signup", signup_path %></li>
+      <% end %>
+    <% end %>
+  </ul>
+</nav>
+
+
     </div>
   </header>
   <%= yield %>
