--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,4 +1,8 @@
 <div class="centered-page">
-  <h1>Welcome, <%= current_user.first_name %>!</h1>
-  <p>This is your dashboard.</p>
+  <h1>Dashboard</h1>
+  <%= render "projects/form", project: @project %>
+<% @projects.each do |project| %>
+  <%= render "projects/project_card", project: project %>
+<% end %>
+
 </div>
