--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,20 +1,11 @@
 <% content_for :title, "#{base_title}" %> 
 
 <div class="centered-page landing-page">
-  <h1>A clean, professional, and minimal <br> platform
-      to demo your projects.</h1>
-  <br>
-  <h2>
-    Share your profile link with employers or clients. 
-    Browse apps made by other developers.
-  </h2>
-   
-  <br>
+  <h1>A clean, professional, and minimal<br>platform to demo your projects.</h1>
+  <h2>Share your profile link with employers or clients.<br>Browse apps made by other developers.</h2>
   <h3>Secure your Username. <u>Join Now</u></h3>
-  <br>
-  <form>
-    <div class="input-group">
-      <%= link_to "Register", signup_path, method: :get,  class: "login-signup-btn signup-btn-color signup-btn-bottom" %>
-    </div>
-  </form>
+  <div class="input-group">
+    <%= link_to "Register", signup_path, method: :get, class: "login-signup-btn signup-btn-color signup-btn-bottom" %>
+  </div>
 </div>
+
