--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: project, local: true, html: { class: "form-container" }) do |form| %>
     <div class="input-group">
-      <label for="email_address" class="label">Project Name:</label>
+      <label for="project name" class="label">Project Name:</label>
       <%= form.text_field :name, class: "project-name-input" %>
     </div>
   <div class="input-group">
