--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Projects#edit</h1>
-<p>Find me in app/views/projects/edit.html.erb</p>
+<div class="centered-page">
+  <h2>Edit Project</h2>
+  <%= form_with(model: @project, local: true, html: { class: "form-container" }) do |form| %>
+    <div class="input-group">
+      <label for="project name" class="label">Project Name:</label> 
+      <%= form.text_field :name, class: "project-name-input" %>
+    </div>
+    <div class="input-group">
+      <label for="Project description" class="label">Project Description:</label>
+      <%= form.text_area :description, class: "project-description-input" %>
+    </div>
+    <%= form.submit "Save Changes", class: "login-signup-btn signup-btn-color signup-btn-bottom" %>
+    <%= link_to "Cancel", dashboard_path, class: "login-signup-btn cancel-btn-color signup-btn-bottom" %>
+  <% end %>
+</div>
