--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
   <h3>Secure your Username. <u>Join Now</u></h3>
   <br>
   <div class="input-group">
-    <%= link_to "Register", signup_path, method: :get, class: "login-signup-btn signup-btn-color signup-btn-bottom" %>
+    <%= link_to "Register", signup_path, method: :get, class: "login-signup-btn signup-btn-color register-landing-btn" %>
   </div>
 </div>
 
