--- a/app/views/projects/_project_card.html.erb
+++ b/app/views/projects/_project_card.html.erb
@@ -50,7 +50,7 @@
       <p>Invalid video link</p>
     <% end %>
   <% else %>
-    <p>No video link available</p>
+    <p>No video link provided</p>
   <% end %>
 </div>
 
