--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,7 +1,10 @@
 <div class="centered-page">
   <h2>Dashboard</h2>
-    <%= render "projects/form", project: @project %>
+  <div class= "form-container" >
+    <%= link_to "Create Project", new_project_path, class: "login-signup-btn signup-btn-color signup-btn-bottom" %>
+  </div>
+  <%# <%= render "projects/form", project: @project %>
     <% @projects.each do |project| %>
-    <%= render "projects/project_card", project: project %>
-  <% end %>
+      <%= render "projects/project_card", project: project %>
+    <% end %>
 </div>
