--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Projects#new</h1>
-<p>Find me in app/views/projects/new.html.erb</p>
+<div class="centered-page">
+  <h2>New Project</h2>
+  <%= form_with(model: @project, local: true, html: { class: "form-container" }) do |form| %>
+    <div class="input-group">
+      <label for="project name" class="label">Project Name:</label>
+      <%= form.text_field :name, required: true, class: "project-name-input" %>
+    </div>
+    <div class="input-group">
+      <label for="Project description" class="label">Project Description:</label>
+      <%= form.text_area :description, required: true, class: "project-description-input" %>
+    </div>
+    <div class="input-group">
+      <label for="Repository Link" class="label">Repository Link:</label>
+      <%= form.text_field :repository_link, required: true, class: "project-description-input" %>
+    </div>
+    <div class="input-group">
+      <label for="Video Link" class="label">Video Link:</label>
+      <%= form.text_field :video_link, class: "project-description-input" %>
+    </div>
+    <%= form.submit "Create Project", class: "login-signup-btn signup-btn-color signup-btn-bottom" %>
+    <%= link_to "Cancel", dashboard_path, class: "login-signup-btn cancel-btn-color signup-btn-bottom" %>
+  <% end %>
+</div>
+
