--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
 <nav id="navbar">
   <ul>
     <% if current_user %>
+      <li><%= link_to "Create Project", new_project_path, class: "nav-signup" %></li>
       <li><%= link_to "Dashboard", dashboard_path %></li>
       <li>
         <%= link_to "Logout", logout_path, data: { turbo_method: :delete }, class: "nav-link" %>
