--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,7 @@
     <% if current_user %>
       <li><%= link_to "Create Project", new_project_path, class: "nav-signup" %></li>
       <li><%= link_to "Dashboard", dashboard_path %></li>
+      <li><%= link_to "Profile", profile_path(username: current_user.username), class: "nav-link" %></li>
       <li>
         <%= link_to "Logout", logout_path, data: { turbo_method: :delete }, class: "nav-link" %>
       </li>
