fixed issue w/ sessions; added share link on project - Work in progress (WIP)

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -3,5 +3,6 @@
   <%# <%= render "projects/form", project: @project %>
     <% @projects.each do |project| %>
       <%= render "projects/project_card", project: project %>
+      <%= render partial: "projects/project_card", locals: { project: project, show_actions: true } %>
     <% end %>
 </div>
