--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
       <li><%= link_to "Dashboard", dashboard_path %></li>
       <li><%= link_to "Profile", profile_path(username: current_user.username), class: "nav-link" %></li>
       <li>
-        <%= link_to "Logout", logout_path, data: { turbo_method: :delete }, class: "nav-link" %>
+        <%= link_to "Logout", logout_path, data: { turbo_method: :delete }, class: "nav-link", method: :delete %>
       </li>
 
     <% else %>
