fix banners logging in / logging out

--- a/app/views/signup/new.html.erb
+++ b/app/views/signup/new.html.erb
@@ -10,7 +10,7 @@
           <% end %>
         </ul>
       </div>
-      <button type="button" class="close-btn" onclick="this.parentElement.style.display='none'">×</button>
+      <button type="login-signup-btn signup-btn-color signup-btn-bottom" class="close-btn" onclick="this.parentElement.style.display='none'">×</button>
     </div>
   <% end %>
   <%= tag.div(flash[:alert], class: "alert-message") if flash[:alert] %>
