--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -400,18 +400,24 @@ nav ul li a:hover {
 }
 
 .alert {
-  width: 35%;
+  width: 50%;
   position: relative;
   padding: 1rem 1.5rem;
-  margin: 1rem 0;
+  margin: 1rem auto; /* This centers the .alert horizontally */
   border: 1px solid transparent;
   border-radius: 0.375rem;
   font-family: Arial, sans-serif;
   font-size: 1.3rem;
   display: flex;
-  justify-content: center; /* Centers content horizontally */
-  align-items: center;    /* Centers content vertically */
-  text-align: center;     /* Centers text inside the alert */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.alert-success {
+  color: green;
+  background-color: #f8d7da;
+  border-color: #f5c2c7;
 }
 
 .alert-error {
